--- a/Source/View/pt-BR.lproj/Main.storyboard
+++ b/Source/View/pt-BR.lproj/Main.storyboard
@@ -6,6 +6,8 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="Segues with Peek and Pop" minToolsVersion="7.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -35,7 +37,7 @@
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="mLn-JM-9Mx" kind="show" id="sIr-hb-ufq"/>
+                                    <segue destination="mLn-JM-9Mx" kind="show" identifier="mostraMes" id="sIr-hb-ufq"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -45,7 +47,7 @@
                         </connections>
                     </tableView>
                     <toolbarItems/>
-                    <navigationItem key="navigationItem" title="Meses" id="aMw-Wa-Bkf"/>
+                    <navigationItem key="navigationItem" title="Meses" largeTitleDisplayMode="always" id="aMw-Wa-Bkf"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="85F-ZZ-1qp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -54,7 +56,7 @@
         <!--MesVC-->
         <scene sceneID="mTG-m6-9fJ">
             <objects>
-                <tableViewController title="Mês" id="mLn-JM-9Mx" userLabel="MesVC" customClass="MesVC" customModule="Mensal" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="MesVC" title="Mês" id="mLn-JM-9Mx" userLabel="MesVC" customClass="MesVC" customModule="Mensal" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" id="7QG-cP-VqJ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -68,7 +70,10 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="jPl-PQ-ioh" kind="presentation" id="lEh-dF-8eT"/>
+                                    <segue destination="jPl-PQ-ioh" kind="presentation" id="lEh-dF-8eT">
+                                        <segue key="commit" inheritsFrom="parent" id="QBa-pO-Ntt"/>
+                                        <segue key="preview" inheritsFrom="commit" id="f6f-I7-Aoc"/>
+                                    </segue>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -77,10 +82,35 @@
                             <outlet property="delegate" destination="mLn-JM-9Mx" id="JbR-X8-6cu"/>
                         </connections>
                     </tableView>
+                    <navigationItem key="navigationItem" title="Nome do mês" largeTitleDisplayMode="always" id="0X8-C5-Wbm"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1hs-Wf-KJZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="985" y="-8"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="NyR-Y5-dyy">
+            <objects>
+                <viewController id="rJ6-OQ-VJQ" sceneMemberID="viewController">
+                    <view key="view" clipsSubviews="YES" contentMode="scaleToFill" id="sYF-I4-Pcj">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O3X-sh-hJk">
+                                <rect key="frame" x="166" y="304" width="42" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="KJ3-4e-mTp"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lvM-M5-nKX" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2753" y="-450"/>
         </scene>
         <!--EdicaoVC-->
         <scene sceneID="ycN-52-UJ7">
@@ -120,12 +150,12 @@
             </objects>
             <point key="canvasLocation" x="2753" y="315"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--PrincipalVC-->
         <scene sceneID="IpJ-mE-eTp">
             <objects>
-                <navigationController id="vpa-4W-JJU" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="kxW-Fc-QLM">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                <navigationController id="vpa-4W-JJU" customClass="PrincipalVC" customModule="Mensal" customModuleProvider="target" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="kxW-Fc-QLM">
+                        <rect key="frame" x="0.0" y="20" width="375" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
@@ -155,4 +185,7 @@
             <point key="canvasLocation" x="1930" y="316"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="lEh-dF-8eT"/>
+    </inferredMetricsTieBreakers>
 </document>
